# cityops-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  agent.py  benchmark.py  chatbot.py  city_data_server.py  data_sources.py  database.py  docker-compose.yml  llm_helper.py  mcp_client.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: sales_data.csv
src/cityops_mcp/: __init__.py  __main__.py  data_sources.py  database.py  paths.py  server.py
tests/: conftest.py  test_database.py  test_run_sql.py  test_server.py
